# Opencfs_stopt

lib/: libhsl.dylib
license/: LICENSE  LICENSE.binary.CLOSED  LICENSE.binary.GPL
license/scpip/: license.txt
license/snopt/: README.FIRST  README.WhatsNew
share/docker/: Dockerfile  README.md
share/fluent/: sourceterms2D.c  sourceterms3D.c
share/matlab/: FftHdf5Core.m  FindPathHDF5.m  PCOLOR.m  README  Time2FreqHDF5.m  TimeFilterHDF5.m  WriteFileInfoHDF5.m  exec.m  fir_upsampling_coefficients_example.m  h5WriteVLStrAtt.m  h5WriteVLStrDset.m  opt_design_change.m  sbmread.m
share/matlab/create_densities/: README.TXT  cube3d.m  rect2d.m
share/matlab/create_densities/from_gid_geo/: README.TXT  RelativeCoordinate.m  computebox.m  createcylinders.m  createdens.m  density-script-jan-auxetic-90grad.m  density-script-jan-cube.m  density-script-jan-diamond.m  example-jan.txt  geolist.m  mshlist.m  plotsceleton.m  plotstruct.m  readgeo.m  readgidmesh.m  readmesh.m  writexml.m  writexml2d.m
share/matlab/eval_cfs/: check_data.m  comp_data.m  eval_acou.m  eval_cfs.m  eval_coord.m  eval_mech.m  example_usage.m  mat_to_vec.m  plot_point.m  plot_quiver.m  plot_scatter.m  plot_surf.m  read_val_array.m  scatter_to_grid.m
share/matlab/material_catalogue/: callCatalogueGeneration.m  callMatlab.sh  createPresetsFullGrid.m  createPresetsFullGrid_bndry.m  createPresetsSparseGrid.m  extractPartialCatalogue.m  generateCatalogueParallel.sh  getInterpolationError.m  getMissingCatalogueValues.m  getWrongCatalogueValues.m  hillmandeltovoigt.m  interpolate.m  ismemberf.m  parfortest.m  plotTensors.m  rotatehillmandel.m  rotatevoigt.m  sortCatalogue.m  validateCFS.m  voigttohillmandel.m  writeHeader.m
share/matlab/material_catalogue/+Homogenization/: computeInterpolationValues.m  generateCross.m  plotEh.m  (+22 more)
share/python/: CMakeLists.txt  abaqus_reader.py  adjustDesign.py  analyze_springs.py  angles-twoload.py  autograd_spaghetti.py  base_structures_images.py  basecell.py  benchmark.py  calcCond.py  calcCondSBM.py  cdash2junit.py  cfs-testsuite-extractor.py  cfs_grid.py  cfs_utils.py  colormaps.py  common.py  comsol_meshconvert.py  continuation.py  convert_fms_to_hom.py  convert_mat_xml.py  convert_xmf2mesh.py  copy_density.py  copy_ref_files.py  create_binary_archive.py  create_density.py  create_mesh.py  create_mesh_special.py  diff_ref.py  draw_profile_functions.py  eigenfrequenzy_plot.py  extract_bloch_region_results.py  extract_info_xml_results.py  fieldviz.py  find_bloch_band_gaps.py  find_mg_levels.py  fmk-extracttensorsfromh5.py  gid_screenshots.py  hdf5_tools.py  matviz.py  (+46 more)
share/python/cubit_scripts/: create_diamond.py  dehomogenize_cross_3d.py  dehomogenize_triangle.py
share/python/material_catalogue/: calculate-crosses.py  calculateTensor.py  create_hom_catalogue.py  create_msfem_catalogue.py  evaluate.py  generateCatalog.py  generate_hom_catalogue_3d_ortho.py  micromodels.py  plot_material_catalogue.py  postprocess.py  postprocess_lufo.py  process_sparse.py
share/python/material_catalogue/tutorial_folder/: Anleitung.txt  Makefile  detailed_stats_ortho_fcrc_bracket_99lines.txt  detailed_stats_vol_ortho_fcrc_bracket.txt  tricubic_int.cc
share/python/streamviz/: README.TXT  api_plot.py  cpscript.py  render_html.py  send_data.py  streamviz.py  strings.py
share/python/streamviz/static/css/: bootstrap_submenu_hack.css  main.css
share/python/streamviz/static/js/: main.js
share/python/streamviz/template_html/: index.html
share/python/trelis/: funcs.py  nacsfilewriter.py  nacsinterface.py  widgets.py
share/scripts/: CMakeGraphVizOptions.cmake  CMakeLists.txt  distro.sh  gendepgraph.sh  getdate.bat  qsub_template.sh
share/vscode/: README.md  launch.json  settings.json
share/xml/: CMakeLists.txt
share/xml/CFS-Dat/: CFS_Dat.xsd
share/xml/CFS-Dat/Schemas/: CFSDat_Aeroacoustic.xsd  CFSDat_AeroacousticType.xsd  CFSDat_BaseFilter.xsd  CFSDat_BinOpFilt.xsd  CFSDat_DatMeshInput.xsd  CFSDat_DatMeshOutput.xsd  CFSDat_DefOn.xsd  CFSDat_DiffScheme.xsd  CFSDat_Differentiation.xsd  CFSDat_DifferentiationType.xsd  CFSDat_FEBased.xsd  CFSDat_FIRFilter.xsd  CFSDat_FftFilter.xsd  CFSDat_FilterList.xsd  CFSDat_GaussDerivative.xsd  CFSDat_GridType.xsd  CFSDat_Interpolation.xsd  CFSDat_InterpolationRBF.xsd  CFSDat_InterpolationType.xsd  CFSDat_NearestNeighbour.xsd  CFSDat_PostLighthill.xsd  CFSDat_ResultDef.xsd  CFSDat_RotDomain.xsd  CFSDat_RotSubstantialTimeDeriv.xsd  CFSDat_SNGR.xsd  CFSDat_SimplePoint.xsd  CFSDat_TDeriv1.xsd  CFSDat_TMean.xsd  CFSDat_TemporalBlending.xsd  CFSDat_Tensor.xsd  CFSDat_TimeType.xsd  CFSDat_VolumeMultiplication.xsd
share/xml/CFS-Material/: CFS_Material.xsd
share/xml/CFS-Material/Examples/: MaterialDataBase.xml  matElec.xml
share/xml/CFS-Material/Schemas/: CFS_MATacoustic.xsd  CFS_MATelecConduction.xsd  CFS_MATelecQuasistatic.xsd  CFS_MATelectric.xsd  CFS_MATflow.xsd  CFS_MATheatConduction.xsd  CFS_MAThysteresis.xsd  CFS_MATmagStrict.xsd  CFS_MATmagnetic.xsd  CFS_MATmechanical.xsd  CFS_MATpiezo.xsd  CFS_MATpyroelectric.xsd  CFS_MATsmooth.xsd  CFS_MATtest.xsd  CFS_MATthermoelastic.xsd  CFS_Misc.xsd
share/xml/CFS-Simulation/: CFS.xsd
share/xml/CFS-Simulation/Schemas/: CFS_Analysis.xsd  CFS_Coupling.xsd  CFS_DirectCoupling.xsd  CFS_Documentation.xsd  CFS_Domain.xsd  CFS_ErsatzMaterial.xsd  CFS_FePolynomial.xsd  CFS_FileFormats.xsd  CFS_HystereticSystem.xsd  CFS_IntegrationScheme.xsd  CFS_LinearSystem.xsd  CFS_Misc.xsd  CFS_Optimization.xsd  CFS_PDELatticeBoltzmann.xsd  CFS_PDEacoustic.xsd  CFS_PDEacousticMixed.xsd  CFS_PDEbasic.xsd  CFS_PDEelecQuasistatic.xsd  CFS_PDEelectricConduction.xsd  CFS_PDEelectrostatic.xsd  CFS_PDEfluidMech.xsd  CFS_PDEfluidMechLin.xsd  CFS_PDEheatConduction.xsd  CFS_PDEmagedge.xsd  CFS_PDEmagnetic.xsd  CFS_PDEmechanic.xsd  CFS_PDEsmooth.xsd  CFS_PDEsplit.xsd  CFS_PDEtest.xsd  CFS_PDEwaterWave.xsd  CFS_PostProc.xsd  CFS_Preconds.xsd  CFS_PythonKernel.xsd  CFS_Solvers.xsd
share/xml/config/: cfstool.json  cfstool.xml  log.xml
share/xsl/: CMakeLists.txt  check_for_docu_tag.xsl  ctest_notes_trafo.xsl  ctest_update_trafo.xsl
(+81 files in other folders)
